# SupplyChainOracle

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: supply_chain_agent.py
backend/app/api/: routes.py
backend/app/integrations/: comtrade.py  newsapi.py  openweather.py
backend/app/rag/: retriever.py  vector_store.py
backend/app/risk/: __init__.py  scoring.py
backend/app/schemas/: chat.py  risk.py
backend/app/services/: datastore.py  ingestion.py  mock_data.py  risk_recalculation.py  system_status.py
backend/tests/: test_risk_recalculation.py  test_scoring.py  test_supply_chain_agent.py  test_vector_store.py
docs/: PRD.md  architecture.md  deployment-checklist.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: main.tsx  styles.css
frontend/src/lib/: api.ts  fallbackData.ts
frontend/src/types/: api.ts
ingestion/: Dockerfile
ingestion/app/: __init__.py
ingestion/app/jobs/: scheduler.py
ingestion/app/normalizers/: __init__.py  disruptions.py
ingestion/app/sources/: __init__.py  comtrade.py  newsapi.py  openweather.py
supabase/: schema.sql
