[project]
name = "supplychain-risk-management"
version = "0.1.0"
description = "AI supply chain risk assistant backend workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
